--- a/src/main/resources/templates/editPatient.html
+++ b/src/main/resources/templates/editPatient.html
@@ -12,18 +12,25 @@
 <div layout:fragment="content1">
    <div class="container col-md-6 offset-3">
        <div class="card m-5">
-           <div class="card-header"> Add New Patient</div>
+           <div class="card-header"> Edit Patient</div>
 
            <div class="card-body">
-               <form method="post" th:action="@{save}">
+               <form method="post" th:action="@{save(page=${page},keyword=${keyword})}">
                    <div class="col-md-6 offset-3"></div>
-                   <div class="form m-3">
+
+                   <div class="form m-1">
+
+                       <input id="id" class="form-control" type="hidden" name="id" th:value="${patient.id}">
+
+                   </div>
+
+                   <div class="form m-1">
                        <label for="nom">Nom</label>
                        <input id="nom" class="form-control" type="text" name="nom" th:value="${patient.nom}">
                        <small class="form-text text-muted" th:errors="${patient.nom}"></small>
                    </div>
 
-                   <div class="form m-3">
+                   <div class="form m-1">
                        <label for="date">Date de Naissance</label>
                        <input id="date" class="form-control" type="date" name="dateNaissance" th:value="${patient.dateNaissance}">
                        <small class="form-text text-muted" th:errors="${patient.dateNaissance}"></small>
@@ -31,19 +38,19 @@
 
 
 
-                   <div class="form m-3">
+                   <div class="form m-1">
                        <label for="malade">Malade</label>
                        <input  id="malade" type="checkbox" name="malade" th:checked="${patient.malade}">
                        <small class="form-text text-muted" th:errors="${patient.malade}"></small>
                    </div>
 
-                   <div class="form m-3">
+                   <div class="form m-1">
                        <label for="score">Score</label>
                        <input id="score" class="form-control" type="text" name="score" th:value="${patient.score}">
                        <small class="form-text text-muted" th:errors="${patient.score}"></small>
                    </div>
 
-                   <button type="submit" class="btn btn-primary m-3" >Add</button>
+                   <button type="submit" class="btn btn-primary m-1" >Edit</button>
 
                </form>
 
