--- a/src/main/resources/templates/editPatient.html
+++ b/src/main/resources/templates/editPatient.html
@@ -15,7 +15,7 @@
            <div class="card-header"> Edit Patient</div>
 
            <div class="card-body">
-               <form method="post" th:action="@{save(page=${page},keyword=${keyword})}">
+               <form method="post" th:action="@{/admin/save(page=${page},keyword=${keyword})}">
                    <div class="col-md-6 offset-3"></div>
 
                    <div class="form m-1">
