--- a/src/main/resources/templates/formPatients.html
+++ b/src/main/resources/templates/formPatients.html
@@ -15,7 +15,7 @@
            <div class="card-header"> Add New Patient</div>
 
            <div class="card-body">
-               <form method="post" th:action="@{save}">
+               <form method="post" th:action="@{/admin/save}">
                    <div class="col-md-6 offset-3"></div>
                    <div class="form m-3">
                        <label for="nom">Nom</label>
