--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -18,7 +18,7 @@
            <div class="card-header ">Liste Patients</div>
                <div class="card-body m-3">
                    <!-- Form pour chercher un patient :-->
-                   <form method="get" th:action="@{index}"> <!-- @mappping vers /index -->
+                   <form method="get" th:action="@{/user/index}"> <!-- @mappping vers /index -->
                         <div>
                             <label >Key-word :</label>
                             <input type="text" name="keyword" th:value="${keyword}" >
@@ -42,13 +42,13 @@
                                    <td th:text="${p.dateNaissance}"></td>
                                    <td th:text="${p.malade}"></td>
                                    <td th:text="${p.score}"></td>
-                                   <td>
-                                       <a onclick="javascript:return confirm('Etes vous sure ?')" th:href="@{delete(id=${p.id},keyword=${keyword},page=${currentPage})}" class="btn btn-danger">
+                                   <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}" >
+                                       <a onclick="javascript:return confirm('Etes vous sure ?')" th:href="@{/admin/delete(id=${p.id},keyword=${keyword},page=${currentPage})}" class="btn btn-danger">
                                            <i class="bi bi-trash"></i>
                                        </a>
                                    </td>
-                                   <td>
-                                       <a  th:href="@{edit(id=${p.id},keyword=${keyword},page=${currentPage})}" class="btn btn-success">
+                                   <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                                       <a  th:href="@{/admin/edit(id=${p.id},keyword=${keyword},page=${currentPage})}" class="btn btn-success">
                                            <i class="bi bi-pencil-square"></i>
                                        </a>
                                    </td>
@@ -63,7 +63,7 @@
 
 <!--                           // th:href : fait appel a @getmapping dans url /index , c est pour ca on a utiliser @ et non pas $-->
 <!--                           //avec page = status.index -->
-                           <a th:href="@{/index(page=${item.index},keyword=${keyword})}"
+                           <a th:href="@{/user/index(page=${item.index},keyword=${keyword})}"
 
                               th:class="${currentPage==item.index?'btn btn-info ms-1':'btn btn-outline-info ms-1'}"
                                th:text="${1+item.index}">  </a>
