--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -8,7 +8,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css">
-    <script src="webjars/bootstrap/5.3.3/js/bootstrap.bundle.js"></script>
+
+    <script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <style>
     .custom-navbar {
@@ -25,15 +27,17 @@
         <!-- Links -->
         <ul class="navbar-nav col-6 offset-6 ">
             <li class="nav-item custom-navbar ">
-                <a class="nav-link" th:href="@{/index}">Home</a>
+                <a class="nav-link" th:href="@{/user/index}">Home</a>
             </li>
 
             <li class="nav-item" style="margin-right: 15px;"></li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Patients</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" th:href="@{/formPatients}">Add New Patient </a></li>
-                    <li><a class="dropdown-item" th:href="@{/index}">Search Patient </a></li>
+                    <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                        <a class="dropdown-item" th:href="@{/admin/formPatients}">Add New Patient </a>
+                    </li>
+                    <li><a class="dropdown-item" th:href="@{/user/index}">Search Patient </a></li>
 
                 </ul>
             </li>
@@ -41,10 +45,22 @@
 
             <li class="nav-item" style="margin-right: 15px;"></li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Username</a>
+                <a class="nav-link dropdown-toggle" href="#" role="button"
+                   data-bs-toggle="dropdown"
+                   th:text="${#authentication.getName()}"
+                ></a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" th:href="@{/formPatients}">Logout</a></li>
+                    <li>
+                        <form method="post" th:action="@{/logout}">
+                            <button class="dropdown-item" type="submit" >Logout</button>
+                        </form>
+
+                    </li>
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+
                 </ul>
+
+
             </li>
             <li class="nav-item" style="margin-right: 15px;"></li>
         </ul>
